gap fixed for mb

--- a/blocks/pagination/pagination.css
+++ b/blocks/pagination/pagination.css
@@ -81,10 +81,8 @@
     }
 
     .pagination .page-btn {
-        width: 40px;
+        width: 39px;
+        height: 32px;
     }
 
-    .pagination > div {
-        gap: 0;
-    }
 }
